refactor: внедрить MapStruct, инкапсулировать trim строк и вынести ключ ошибки в константу, убрать транзакционность