@@ -2,81 +2,63 @@ package ru.aston.hometask4.services.impl;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 import ru.aston.hometask4.dto.UserRequestDto;
 import ru.aston.hometask4.dto.UserResponseDto;
 import ru.aston.hometask4.exceptions.ResourceNotFoundException;
+import ru.aston.hometask4.mapping.UserMapper;
 import ru.aston.hometask4.models.User;
 import ru.aston.hometask4.repositories.UserRepository;
 import ru.aston.hometask4.services.UserService;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-@Transactional(readOnly = true)
 public class UserServiceImpl implements UserService {
 
+    public static final String USER_NOT_FOUND_KEY = "user.not_found";
+
     private final UserRepository userRepository;
+    private final UserMapper userMapper;
 
     @Override
-    @Transactional
     public UserResponseDto createUser(UserRequestDto requestDto) {
-        User user = User.builder()
-                .name(requestDto.name().trim())
-                .email(requestDto.email())
-                .age(requestDto.age())
-                .build();
-
+        User user = userMapper.toEntity(requestDto);
         User savedUser = userRepository.save(user);
-        return mapToResponseDto(savedUser);
+        return userMapper.toResponseDto(savedUser);
     }
 
     @Override
     public UserResponseDto getUserById(UUID id) {
         User user = userRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("user.not_found", id));
-        return mapToResponseDto(user);
+                .orElseThrow(() -> new ResourceNotFoundException(USER_NOT_FOUND_KEY, id));
+        return userMapper.toResponseDto(user);
     }
 
     @Override
     public List<UserResponseDto> getAllUsers() {
         return userRepository.findAll().stream()
-                .map(this::mapToResponseDto)
-                .collect(Collectors.toList());
+                .map(userMapper::toResponseDto)
+                .toList();
     }
 
     @Override
-    @Transactional
     public UserResponseDto updateUser(UUID id, UserRequestDto requestDto) {
         User user = userRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("user.not_found", id));
+                .orElseThrow(() -> new ResourceNotFoundException(USER_NOT_FOUND_KEY, id));
+        userMapper.updateUserFromDto(requestDto, user);
 
-        user.setName(requestDto.name().trim());
-        user.setEmail(requestDto.email());
-        user.setAge(requestDto.age());
+        User updatedUser = userRepository.save(user);
 
-        return mapToResponseDto(user);
+        return userMapper.toResponseDto(updatedUser);
     }
 
     @Override
-    @Transactional
     public void deleteUserById(UUID id) {
         if (!userRepository.existsById(id)) {
-            throw new ResourceNotFoundException("user.not_found", id);
+            throw new ResourceNotFoundException(USER_NOT_FOUND_KEY, id);
         }
         userRepository.deleteById(id);
-    }
-
-    private UserResponseDto mapToResponseDto(User user) {
-        return new UserResponseDto(
-                user.getId(),
-                user.getName(),
-                user.getEmail(),
-                user.getAge(),
-                user.getCreatedAt()
-        );
     }
 }
